--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -35,6 +35,18 @@
             "stopOnEntry": false
         },
         {
+            "name": "Debug Web Interface",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/src/forgebase/web_main.py",
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}",
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}/src"
+            },
+            "justMyCode": true
+        },
+        {
             "name": "Debug Tests",
             "type": "debugpy",
             "request": "launch",
