--- a/.env.sample
+++ b/.env.sample
@@ -1,10 +1,8 @@
-# Azure OpenAI Configuration
-AZURE_OPENAI_ENDPOINT=
-AZURE_OPENAI_API_KEY=
-AZURE_OPENAI_DEPLOYMENT_NAME=
-# Frontend/backends defaults
-FORGEBASE_HOST=0.0.0.0
-FORGEBASE_PORT=8000
-FRONTEND_HOST=localhost
-FRONTEND_PORT=5173
-FRONTEND_FALLBACK_PORT=5174
+# Moved: Environment variables now live under backend/.env and backend/.env.sample
+# This file is kept only as a pointer to avoid confusion after the repo reorg.
+#
+# Please copy and edit backend/.env.sample instead:
+#
+#   cd backend
+#   cp .env.sample .env
+#   # then fill in AZURE_* values if using Azure OpenAI
