--- a/frontend/.devcontainer/devcontainer.json
+++ b/frontend/.devcontainer/devcontainer.json
@@ -1,13 +1,8 @@
 {
     "name": "Forgebase Frontend",
-    "image": "mcr.microsoft.com/devcontainers/typescript-node:22",
-    "features": {
-        "ghcr.io/devcontainers-extra/features/zsh-plugins:1": {
-            "plugins": [
-                "z",
-                "sudo"
-            ]
-        }
+    "build": {
+        "context": "..",
+        "dockerfile": "Dockerfile"
     },
     "customizations": {
         "vscode": {
@@ -23,7 +18,7 @@
                 "dbaeumer.vscode-eslint",
                 "esbenp.prettier-vscode",
                 "bradlc.vscode-tailwindcss",
-                "streetsidesoftware.code-spell-checker"
+                "vitest.explorer"
             ]
         }
     },
