--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,9 @@
     "test:run": "vitest run"
   },
   "dependencies": {
+    "@mantine/core": "8.2.8",
+    "@mantine/hooks": "8.2.8",
+    "@mantine/notifications": "8.2.8",
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.85.6",
