--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,18 +16,13 @@
     "@mantine/core": "8.2.8",
     "@mantine/hooks": "8.2.8",
     "@mantine/notifications": "8.2.8",
-    "@tailwindcss/postcss": "^4.1.12",
-    "@tailwindcss/typography": "^0.5.16",
+    "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-query": "^5.85.6",
-    "autoprefixer": "^10.4.21",
     "axios": "^1.11.0",
-    "clsx": "^2.1.1",
-    "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
-    "rehype-highlight": "^7.0.2",
-    "tailwindcss": "^4.1.12"
+    "rehype-highlight": "^7.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
