--- a/frontend/.devcontainer/devcontainer.json
+++ b/frontend/.devcontainer/devcontainer.json
@@ -30,7 +30,7 @@
             "onAutoForward": "notify"
         }
     },
-    "postCreateCommand": "npm ci",
+    "postCreateCommand": "npm install && npm ci",
     "waitFor": "postCreateCommand",
     "remoteUser": "node",
     "runArgs": [
